--- a/sa.html
+++ b/sa.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
+        
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,36 +9,40 @@
     <link href="estilos/estilo.css" rel="stylesheet" />
 </head>
 
+<header>
+    <h1>Controle de Efluentes</h1>
+  </header>
+
 <body>
-    <h1>Daniel, William, Marcos</h1>
-    <a>
+    <ab>
     <h3>Data: 27/09/2023</h3>
     <h3>Hora: 21:17</h3>
-</a>
-<a>
+</ab>
+<b>
     <h3>Medições realizadas</h3>
     <h3>Temperatura°</h3>
     <h3>Turbidez</h3>
     <h3>Ph</h3>
     <h3>Nível d'água - cm</h3>
-</a>
-<a>
+</b>
+<c>
     <h3>Data: 31/12/2023</h3>
     <h3>Hora: 23:59</h3>
-</a>
-<a>
+</c>
+<d>
     <h3>Medições realizadas</h3>
     <h3>Temperatura°</h3>
     <h3>Turbidez</h3>
     <h3>Ph</h3>
     <h3>Nível d'água - cm</h3>
-</a>
+</d>
 <navbar class="navbar">
     <a href="#" class="item">Temperatura</a>
     <a href="#" class="item">Turbidez</a>
     <a href="#" class="item">Ph</a>
     <a href="#" class="item">Nível da água</a>
 </navbar>
+<h2>Daniel, William, Marcos</h2>
 </body>
 
 </html>
