--- a/sa.html
+++ b/sa.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Painel Dashboard</title>
-    <link href="estilos/estilo.css" rel="stylesheet" />
+    <link href="estilo.css" rel="stylesheet" />
 </head>
 
 <header>
@@ -14,34 +14,20 @@
   </header>
 
 <body>
-    <ab>
-    <h3>Data: 27/09/2023</h3>
-    <h3>Hora: 21:17</h3>
-</ab>
-<b>
-    <h3>Medições realizadas</h3>
-    <h3>Temperatura°</h3>
-    <h3>Turbidez</h3>
-    <h3>Ph</h3>
-    <h3>Nível d'água - cm</h3>
-</b>
-<c>
-    <h3>Data: 31/12/2023</h3>
-    <h3>Hora: 23:59</h3>
-</c>
-<d>
-    <h3>Medições realizadas</h3>
-    <h3>Temperatura°</h3>
-    <h3>Turbidez</h3>
-    <h3>Ph</h3>
-    <h3>Nível d'água - cm</h3>
-</d>
-<navbar class="navbar">
-    <a href="#" class="item">Temperatura</a>
-    <a href="#" class="item">Turbidez</a>
-    <a href="#" class="item">Ph</a>
-    <a href="#" class="item">Nível da água</a>
-</navbar>
+    <div class="container" >
+        <div class="item" >
+            <h3>Temperatura Atual:</h3>
+        </div>
+	<div class="item" >
+        <h3>Ph Atual:</h3>
+    </div>
+	<div class="item" >
+        <h3>Turbidez Atual:</h3>
+    </div>
+    <div class="item" >
+        <h3>Profundidade Atual:</h3>
+    </div>
+</div>
 <h2>Daniel, William, Marcos</h2>
 </body>
 
