--- a/sa.html
+++ b/sa.html
@@ -9,24 +9,23 @@
     <link href="estilo.css" rel="stylesheet" />
 </head>
 
-<header>
-    <h1>Controle de Efluentes</h1>
-  </header>
-
 <body>
-    <div class="container" >
-        <div class="item" >
+    <header>
+        <h1>Controle de Efluentes</h1>
+      </header>
+    <div class="bloco">
+        <div class="item">
             <h3>Temperatura Atual:</h3>
         </div>
-	<div class="item" >
-        <h3>Ph Atual:</h3>
-    </div>
-	<div class="item" >
-        <h3>Turbidez Atual:</h3>
-    </div>
-    <div class="item" >
-        <h3>Profundidade Atual:</h3>
-    </div>
+        <div class="item">
+            <h3>Ph Atual:</h3>
+        </div>
+        <div class="item">
+            <h3>Turbidez Atual:</h3>
+        </div>
+        <div class="item">
+            <h3>Profundidade Atual:</h3>
+        </div>
 </div>
 <h2>Daniel, William, Marcos</h2>
 </body>
